--- a/MedicalLinkUpdate/MedicalLinkUpdate.csproj
+++ b/MedicalLinkUpdate/MedicalLinkUpdate.csproj
@@ -38,6 +38,12 @@
     <ApplicationIcon>Logo_VT_1.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Data.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v15.2.Core, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraEditors.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraLayout.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeList.v15.2, Version=15.2.9.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="Mono.Security">
       <HintPath>..\MedicalLink\Library\Mono.Security.dll</HintPath>
     </Reference>
@@ -65,6 +71,12 @@
   <ItemGroup>
     <Compile Include="ConnectDatabase.cs" />
     <Compile Include="EncryptAndDecrypt.cs" />
+    <Compile Include="frmUpdateSoftware.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmUpdateSoftware.Designer.cs">
+      <DependentUpon>frmUpdateSoftware.cs</DependentUpon>
+    </Compile>
     <Compile Include="KeyTrongPhanMem.cs" />
     <Compile Include="MedicalLinkUpdateMain.cs">
       <SubType>Form</SubType>
@@ -74,6 +86,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util_FileCheckSum.cs" />
+    <EmbeddedResource Include="frmUpdateSoftware.resx">
+      <DependentUpon>frmUpdateSoftware.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MedicalLinkUpdateMain.resx">
       <DependentUpon>MedicalLinkUpdateMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Logo_VT_1.ico" />
+    <None Include="Resources\check-mark-16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
